syntax = "proto3";
package dbmodel;
import public "google/protobuf/timestamp.proto";

enum TreeType{
  AREA=0;//地址，已经提取出去单独做表
  PRD=1;//商品类型
  QUA=2;//资质类型
  USER=3;//用户类型，已经提取出去做常量了
  FILE=4;//文件类型,已经提取出去做产量
  DEP=5;//部门结构
  MENU=6;//菜单，已经单独独立出去了
  LOGIN=7;//登录方式，单独做枚举了，因为添加登录类型的时候也要添加相应的登录方式代码
  SEX=8;//性别
  OTHER=99;//其他
}

enum LoginType{
  NAME=0;//用户名登陆
  PHONE=1;//手机登录
  EMAIL=2;//邮箱登录
}


enum UserType{//用于设计用户数据权限
  PLATFORM=0;//平台用户（业务员）：能够查询区域的商家
  SHOP=1;//平台入驻商家（商家，批发商）：能够查询自己的商品
  CUSTOMER=2;//平台客户（客户，采购商）：能够查询区域的商家
  ADMIN =9527; //超级管理员
}
enum FileType{
  USERLOG=0;//用户头像
  SHOPLOG=1;//店铺头像
  PLATFORMIMG=2;//平台图片
  INDEXLBTIMG=3;//首页轮播图
  PRODUCTIMG=4;//商品图片
  OTHERIMG=5;//其他图片
}
enum  PrdType{
  DOWN=0;//下架商品，一审拒绝，二审拒绝
  ONEING=1;//一审中
  TWOING=2;//二审中,一审通过
  UP=3;//上架销售中，二审通过
}

/*资质先不单独拿出来，因为资质不固定
enum QuaType{//资质类型 参照http://www.twgrace.cn/chanpinrenzheng/p12.html
  IDCARD=0;//身份证
  BANCKCARD=1;//银行卡
  BIZLICENSE=2;//营业执照证书(三证合一)
  DMC=3;//药品生产许可证
  DSC=4;//药品经营许可证
  GSP=5;//药品经营质量管理规范
  GMP=6;//药品生产质量管理规范
  PPC=7;//医疗机构制剂许可证
  IDL=8;//进口药品注册证书
  CT=9;//临床试验
  NDC=10;//新药证书
  ATTORNEY=11;//授权委托书
  GTQ=12;//一般纳税人资质证明
  SQC=13;//SC/QC食品生产许可证
  QS=14;//食品质量安全生产许可证
  OIML=15;//OIML即国际法制计量组织,任何企业、事业单位要求获得计量器具的OIML证书，可向OIML中国秘书处提出申请。
  HZP=16;//化妆品生产许可
  GMPC=17;//化妆品GMPC是以《化妆品产品的良好生产规范----顾客的健康保护》(简称GMPC)为标准，基于对顾客的健康保护为出发点的第三方认证。对于在美国和欧盟市场上销售的化妆品，无论在国内生产还是从国外进口，都必须符合美国联邦化妆品法
  THREEC=18;//3C认证的全称为“强制性产品认证制度”，它是中国政府为保护消费者人身安全和国家安全、加强产品质量管理、依照法律法规实施的一种产品合格评定制度。所谓3C认证，就是中国强制性产品认证制度，英文名称China Compulsory
  KHXKZ=19;//开户许可证
  SHOPURL=20;//网店完整的域名截图照片（含店铺信息）
  BIZLICENSEADREES=21;//商户营业场所照片
  OTHERS=22;//其他资质
}*/

message SysUser {//用户表
  string  id = 1;
  string user_name = 2;
  string true_name = 3;
  string user_phone = 4;
  //string user_password=22;
  //string wx_open_id=23;
  string user_wx = 5;
  string user_email = 6;
  string user_qq = 7;
  string user_tel = 8;
  string balance = 9;//账户余额
  string id_card = 10;//身份证号码
  string point=11;//积分
  string province_id=12;
  SysArea province=13;
  string city_id = 14;
  SysArea city=15;
  string area_id = 16;
  SysArea area=17;
  string address = 18;
  int32 vip = 19;//vip等级

  string bank_name=20;//银行名称
  string branch_name = 21;//银行分行名称
  string bankcard = 22;//银行卡号
  string bank_card_name = 23;//持卡人/单位

  string user_icon = 24;
  SysFile icon=25;

  repeated SysRole roles=26;
  repeated SysGroup groups=27;
  repeated LogisticsAddress logistics_addresss=28;// 发收货地址管理
  repeated Qualification qualifications=29;
  UserType user_type=30;
  //SysTree user_type=30;
  //string user_type_id=31;
  //repeated SysShop shops=32;
  SysShop shop=32;
  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message OnlyMenu{
  repeated SysMenu menus=31;
}
message OnlySrv{
  repeated SysSrv srvs=1;
}

message OnlyApi{
  repeated SysApi apis=1;
}
message SysFile{//SysFile文件
  string id=1;//文件id
  string name=2;//上传文件名称，一般设置为id+后缀
  string path=3;//路径
  string size=4;//大小
  string  file_explain=5;//描述
  int32 sort=6;//排序
  FileType file_type=7;//图片类型
 /* SysTree file_type=7;//图片类型
  string file_type_id=8;*/
  string file_suffix=9;//图片后缀

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message SysTree{
  string id=1;//id,有则修改，无则添加
  string code=2;//编码
  string text=3;
  int32 sort=4;
  TreeType type=7;
  string  p_id=5;
  repeated SysTree children=6;

  string key=100;
  string title=101;
  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}

message SysArea{
  string id=1;//id,有则修改，无则添加
  string code=2;//编码
  string text=3;
  int32 sort=4;
  string  p_id=5;
  repeated SysArea children=6;
  string short_name=7;//简称
  string city_code=8;//区号
  string zip_code=9;//邮编
  string merger_name=10;//完整地址
  float lng=11;//横坐标
  float lat=12;//纵坐标
  string pinyin=13;//拼音

  string key=100;
  string title=101;
  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}


//用户组请求
message  SysGroup{
  string id=1;//id,有则修改，无则添加
  string group_name=2;//用户组名称
  string  group_explain=3;//用户组说明
  repeated SysRole roles=4;//角色
  repeated SysRole users=5;//角色

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}

//角色请求
message  SysRole{
  string id=1;//id,有则修改，无则添加
  string role_name=2;//角色名称
  string role_explain=3;//角色说明
  repeated SysMenu menus=4;
  repeated SysSrv srvs=5;
  repeated SysApi apis=6;
  repeated SysUser users=7;
  string  p_id=8;//父级id
  repeated SysRole children=9;
  
  string key=100;
  string title=101;
  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message  SysMenu{
  string id=1;
  string key=2;
  string text=3;//树名称
  string i_18_n=4;//i18n主键
  string link=5;//'路由，link、externalLink 二选其一
  string external_link=6;//外部链接
  string target=7;//链接类型
  string  sort=8;//排序
  int32  badge=9;//标签数量
  string  badge_doc=10;//标签文字
  string badge_status =11;//徽标 Badge 颜色
  string acl =12;//徽标 Badge 颜色
  bool hide=13;
  bool disabled=14;
  bool hideInBreadcrumb=15;
  bool shortcut=16;
  bool shortcut_root=17;
  bool reuse=18;
  string  icon=19;
  string  p_id=20;
  repeated SysMenu children=21;
  bool group=22;
  string title=101;
  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message SysApi{
  string id=1;//id,有则修改，无则添加
  string service=2;//服务名
  string method=3;//方法
  string api_explain=4;//描述

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message SysSrv{
  string id=1;//id,有则修改，无则添加
  string service=2;//服务名
  string method=3;//方法
  string srv_explain=4;//描述

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message LogisticsAddress {
  string id=1;//id,有则修改，无则添加
  bool is_default = 2;
  string user_id = 3;
  SysUser user=4;

  string province_id=12;
  SysArea province=13;
  string city_id = 14;
  SysArea city=15;
  string area_id = 16;
  SysArea area=17;
  string address = 18;

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message Qualification {

  string id=1;//id,有则修改，无则添加
  bool is_default = 2;
  /*string user_id = 3;
  string shop_id=4;
  string prd_id=12;*/
  string foreign_id=3;
  //QuaType qua_type=5;
  SysTree qua_type=5;
  string qua_type_id=11;
  repeated SysFile qua_files=6;

  string qua_explain = 7;
  string qua_number = 8;

  string start_time=9;
  string end_time=10;

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message SysShop {//店铺
  string  id = 100;
  string shop_name = 1;
  string shop_explain = 2;
  bool is_sht = 3;
  string sht_explain = 4;
  string app_id = 5;
  string appsecret = 6;

  float grade = 7;//评分总数
  float grade_wl = 8;
  float grade_fw = 9;
  float grade_ms = 10;
  int32 cash = 11;
  int32 sort = 12;
  int32 comments = 13;
  int32 vip = 14;
  float point = 15;//积分
  SysFile logo=16;
  repeated SysFile classify=17;//商家分类
  //repeated SysUser user=18;
  string user_id=18;
  repeated SysFile imgs=19;
  repeated Qualification qualifications=20;

  string province_id=21;
  SysArea province=22;
  string city_id = 23;
  SysArea city=24;
  string area_id = 25;
  SysArea area=26;
  string address = 27;

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message Product {
  string  id = 1;
  string goods_code = 2;
  string goods_name=97;
  string goods_byname = 3;

  string factory = 4;//生产厂家
  string prd_address = 5;//生产地址

  string approval_num = 6;//批准文号
  string spec = 7;//规格
  string dosage_form = 8;//剂型
  string unit = 9;//单位
  string opcode = 10;//拼音助记码
  
  float  mpack_total = 11;//中包装数量
  float pack_total = 12;//件包装数量

  bool is_unbundled = 13;//是否可拆零
  bool is_stop = 14;//是否停售

  string goods_explain = 15;//商品描述

  SysShop shop=16;
  string shop_id=17;
  repeated SysFile imgs=18;
  repeated ProductSku product_skus=19;
  string product_classify_id=20;//sha
  SysTree product_classify=21;
  string  area_id=22;
  SysArea area=23;
  repeated Qualification qualifications=24;
  int64 sort=96;
  PrdType prd_type=95;
  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message ProductSku {
  string  id = 1;
  string sku_name = 2;
  //Attributes: datatypes.JSON([]byte(`{"name": "jinzhu", "age": 18, "tags": ["tag1", "tag2"], "orgs": {"orga": "orga"}}`)),
  bytes attri_list_bt = 3;

  float point=4;
  float sell_price = 5;//销售价格
  float market_price = 6;//市场价格
  float sale_price = 7;//批发价格
  float sale_price_erp = 8;
  float stock = 9;//库存
  bool is_checked = 10;
  //float  mpack_total = 11;//中包装数量
  //float pack_total = 12;//件包装数量
  string batch_number=11;
  string prodution_date=12;
  string effective_date=13;
  
  Product goods=14;
  repeated SysFile imgs=15;
  string product_id=16;
  float cost_price = 17;//成本价格
  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message Orders {
  string  id = 1;
  string order_number = 2;
  string serial_number = 3;
  repeated OrderItem order_items=4;



  string province_id=12;
  SysArea province=13;
  string city_id = 14;
  SysArea city=15;
  string area_id = 16;
  SysArea area=17;
  string address = 18;

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}
message OrderItem {
  string  id = 1;
  string goods_sku_id = 2;
  string order_id = 3;
  Orders orders=4;
  float unit_price = 5;
  float pay_unit_price = 6; 
  float quantity = 7;
  float send_quantity = 8;
  float total_price = 9;

  string created = 98;//创建时间，时间戳秒
  string updated = 99;//修改时间，
}